syntax = "proto3";

package iam;

option go_package = "grpc";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
    rpc ChangeContactInformation(ChangeContactInformationRequest) returns (ChangeContactInformationResponse) {}
    rpc ChangeEmailAddress(ChangeEmailAddressRequest) returns (ChangeEmailAddressResponse) {}
    rpc ChangePostalAddress(ChangePostalAddressRequest) returns (ChangePostalAddressResponse) {}
    rpc ChangePrimaryTelephone(ChangePrimaryTelephoneRequest) returns (ChangePrimaryTelephoneResponse) {}
    rpc ChangeSecondaryTelephone(ChangeSecondaryTelephoneRequest) returns (ChangeSecondaryTelephoneResponse) {}
    rpc ChangeUserPassword(ChangeUserPasswordRequest) returns (ChangeUserPasswordResponse) {}
    rpc ChangeUserPersonalName(ChangeUserPersonalNameRequest) returns (ChangeUserPersonalNameResponse) {}
    rpc DefineUserEnablement(DefineUserEnablementRequest) returns (DefineUserEnablementResponse) {}
}

message RegisterUserRequest {
    string tenant_id = 1;
    string invitation_id = 2;
    string username = 3;
    string password = 4;
    string first_name = 5;
    string last_name = 6;
    bool enabled = 7;
    int64 start_date = 8;
    int64 end_date = 9;
    string email_address = 10;
    string primary_telephone = 11;
    string secondary_telephone = 12;
    string address_street_name = 13;
    string address_building_number = 14;
    string address_postal_code = 15;
    string address_town = 16;
    string address_state_province = 17;
    string address_country_code = 18;
}

message RegisterUserResponse {}

message AuthenticateUserRequest {
    string tenant_id = 1;
    string username = 2;
    string password = 3;
}

message AuthenticateUserResponse {
    string tenant_id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string email_address = 5;
}

message ChangeContactInformationRequest {
    string tenant_id = 1;
    string username = 2;
    string email_address = 3;
    string primary_telephone = 4;
    string secondary_telephone = 5;
    string address_street_name = 6;
    string address_building_number = 7;
    string address_postal_code = 8;
    string address_town = 9;
    string address_state_province = 10;
    string address_country_code = 11;
}

message ChangeContactInformationResponse {}

message ChangeEmailAddressRequest {
    string tenant_id = 1;
    string username = 2;
    string email_address = 3;
}

message ChangeEmailAddressResponse {}

message ChangePrimaryTelephoneRequest {
    string tenant_id = 1;
    string username = 2;
    string primary_telephone = 3;
}

message ChangePrimaryTelephoneResponse {}

message ChangeSecondaryTelephoneRequest {
    string tenant_id = 1;
    string username = 2;
    string secondary_telephone = 3;
}

message ChangeSecondaryTelephoneResponse {}

message ChangePostalAddressRequest {
    string tenant_id = 1;
    string username = 2;
    string address_street_name = 3;
    string address_building_number = 4;
    string address_postal_code = 5;
    string address_town = 6;
    string address_state_province = 7;
    string address_country_code = 8;
}

message ChangePostalAddressResponse {}

message ChangeUserPasswordRequest {
    string tenant_id = 1;
    string username = 2;
    string current_password = 3;
    string changed_password = 4;
}

message ChangeUserPasswordResponse {}

message ChangeUserPersonalNameRequest {
    string tenant_id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
}

message ChangeUserPersonalNameResponse {}

message DefineUserEnablementRequest {
    string tenant_id = 1;
    string username = 2;
    bool enabled = 3;
    int64 start_date = 4;
    int64 end_date = 5;
}

message DefineUserEnablementResponse {}